--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,14 +29,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  get:
-  reactive_forms:
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.4
+  reactive_forms: ^11.0.1
+  get: ^4.6.1
 
 dev_dependencies:
   flutter_test:
