--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   http: ^0.13.4
   reactive_forms: ^11.0.1
   get: ^4.6.1
+  package_info_plus: ^1.4.0
+  device_info_plus: ^3.2.2
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_test:
