--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   package_info_plus: ^1.4.0
   device_info_plus: ^3.2.2
   get_storage: ^2.0.3
+  open_mail_app: ^0.4.5
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +60,12 @@ flutter_native_splash:
   color: "#ffffff"
   image: assets/images/flagstat_logo.png
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: assets/images/flagstat_icon.png
+  adaptive_icon_background: "#ffffff"
+
 # The following section is specific to Flutter.
 flutter:
 
@@ -69,6 +77,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/flagstat_logo.png
+    - assets/images/auth/verify-email.png
+    - assets/images/auth/forgot-password.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
