--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ flutter:
     - assets/images/auth/verify-email.png
     - assets/images/auth/forgot-password.png
     - assets/images/global/no_results.svg
+    - assets/images/global/no_avatar.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
